--- a/examples/mesos_cluster.yaml
+++ b/examples/mesos_cluster.yaml
@@ -3,7 +3,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 repositories:
   indigo_repository:
     description: INDIGO Custom types repository
-    url: https://raw.githubusercontent.com/alpegon/tosca-types/mesos-recipes/
+    url: https://raw.githubusercontent.com/alpegon/tosca-types/mesos-recipes
 
 imports:
   - indigo_custom_types:
@@ -21,19 +21,27 @@ topology_template:
       requirements:
         - host: mesos_master_server
 
-    mesos_lb:
-      type: tosca.nodes.indigo.MesosLoadBalancer
-      properties:
-        master_ips: { get_attribute: [ mesos_master_server, public_address ] }
-      requirements:
-        - host: mesos_lb_server
-
     mesos_slave:
       type: tosca.nodes.indigo.MesosSlave
       properties:
         master_ips: { get_attribute: [ mesos_master_server, public_address ] }
       requirements:
         - host: mesos_slave_server
+
+    mesos_lb_master:
+      type: tosca.nodes.indigo.MesosLoadBalancerMaster
+      properties:
+        master_ips: { get_attribute: [ mesos_master_server, public_address ] }
+      requirements:
+        - host: mesos_lb_master_server
+
+    mesos_lb_slave:
+      type: tosca.nodes.indigo.MesosLoadBalancerSlave
+      properties:
+        master_ips: { get_attribute: [ mesos_master_server, public_address ] }
+        lb_master_ip: { get_attribute: [ mesos_lb_master_server, public_address ] }
+      requirements:
+        - host: mesos_lb_slave_server
 
     mesos_master_server:
       type: tosca.nodes.indigo.Compute
@@ -42,25 +50,7 @@ topology_template:
       capabilities:
         scalable:
           properties:
-            count: 2
-        host:
-          properties:
-            num_cpus: 1
-            mem_size: 1 GB
-        os:
-          properties:
-            type: linux
-            #distribution: ubuntu
-            #version: 14.04
-
-    mesos_lb_server:
-      type: tosca.nodes.indigo.Compute
-      properties:
-        public_ip: yes
-      capabilities:
-        scalable:
-          properties:
-            count: 1
+            count: 3
         host:
           properties:
             num_cpus: 1
@@ -79,6 +69,42 @@ topology_template:
         scalable:
           properties:
             count: 3
+        host:
+          properties:
+            num_cpus: 1
+            mem_size: 1 GB
+        os:
+          properties:
+            type: linux
+            #distribution: ubuntu
+            #version: 14.04
+
+    mesos_lb_master_server:
+      type: tosca.nodes.indigo.Compute
+      properties:
+        public_ip: yes
+      capabilities:
+        scalable:
+          properties:
+            count: 1
+        host:
+          properties:
+            num_cpus: 1
+            mem_size: 1 GB
+        os:
+          properties:
+            type: linux
+            #distribution: ubuntu
+            #version: 14.04
+
+    mesos_lb_slave_server:
+      type: tosca.nodes.indigo.Compute
+      properties:
+        public_ip: no
+      capabilities:
+        scalable:
+          properties:
+            count: 1
         host:
           properties:
             num_cpus: 1
