--- a/artifacts/zabbix/zabbix_agent_install.yml
+++ b/artifacts/zabbix/zabbix_agent_install.yml
@@ -25,8 +25,13 @@
     yum: name=http://repo.zabbix.com/zabbix/3.0/rhel/{{ ansible_distribution_major_version }}/x86_64/zabbix-release-3.0-1.el{{ ansible_distribution_major_version }}.noarch.rpm
     when: ansible_os_family == "RedHat"
 
+  - name: Apt-get update
+    apt: update_cache=yes
+    when: ansible_os_family == "Debian"
+    ignore_errors: yes
+    
   - name: Apt install Zabbix agent
-    apt: name=zabbix-agent update_cache=yes
+    apt: name=zabbix-agent
     when: ansible_os_family == "Debian"
 
   - name: Yum install Zabbix agent
