Update image url to use OCCI amber image

--- a/examples/node_with_image.yaml
+++ b/examples/node_with_image.yaml
@@ -37,10 +37,10 @@ topology_template:
             # Currently this example uses the IM URI convention
             # used in disk.0.image.url
             # see: http://imdocs.readthedocs.org/en/latest/radl.html?highlight=uri#system-features
-            image: https://onedock.i3m.upv.es:11443/uuid_ubuntu_ssh_indigo_4 
+            image: https://onedock.i3m.upv.es:11443/uuid_ubuntu_ambertools_5
             credential: 
               user: root
-              token: indig0!
+              token: c@r0nt3
 
   outputs:
     node_ip:
