Add hosts: localhost & connection: local to the beginning of each ansible recipe

--- a/artifacts/apache/apache_install.yml
+++ b/artifacts/apache/apache_install.yml
@@ -1,4 +1,7 @@
-- tasks:      
+---
+- hosts: localhost
+  connection: local
+  tasks:
   - name: Apache | Make sure the Apache packages are installed
     apt: name=apache2 update_cache=yes
     when: ansible_os_family == "Debian"
