--- a/artifacts/mesos/mesos_master_start.yml
+++ b/artifacts/mesos/mesos_master_start.yml
@@ -1,7 +1,10 @@
+---
+- hosts: localhost
+  connection: local
 ##################################
 ##           VARIABLES          ##
 ##################################
-- vars:
+  vars:
     ##############################
     #     MARATHON VARIABLES     #
     ##############################
