--- a/artifacts/mysql/mysql_db_configure.yml
+++ b/artifacts/mysql/mysql_db_configure.yml
@@ -1,5 +1,7 @@
 ---
-- tasks:
+- hosts: localhost
+  connection: local
+  tasks:
   - name: Create DB {{db_name}}
     mysql_db: name={{db_name}} state=present login_user=root login_password={{db_root_password}}
   
