--- a/artifacts/apache/apache_start.yml
+++ b/artifacts/apache/apache_start.yml
@@ -1,4 +1,7 @@
-- tasks:
+---
+- hosts: localhost
+  connection: local
+  tasks:
   - name: Start Apache service
     service: name=apache2 state=started
     when: ansible_os_family == "Debian"
