--- a/artifacts/ec3/ec3_configure.yml
+++ b/artifacts/ec3/ec3_configure.yml
@@ -1,5 +1,7 @@
 ---
-- handlers:
+- hosts: localhost
+  connection: local
+  handlers:
     - name: restart cluesd
       service: name=cluesd state=restarted
 
@@ -119,6 +121,5 @@
       when: clues_queue_system == 'slurm'                                                                         
     - command: mv /usr/local/bin/clues-slurm-wrapper /usr/local/bin/sbatch creates=/usr/local/bin/sbatch
       when: clues_queue_system == 'slurm'
-      
+
       # TODO: Add Mesos and HTCondor recipes
-      
