--- a/artifacts/lrms/torque/torque_fe_start.yml
+++ b/artifacts/lrms/torque/torque_fe_start.yml
@@ -1,17 +1,19 @@
 ---
- - tasks:
-    # Launch PBS
-    - service: name=pbs_server state=started pattern=/usr/sbin/pbs_sched
-      when: ansible_os_family == "RedHat"
-    - service: name=torque-scheduler state=started pattern=/usr/sbin/pbs_sched
-      when: ansible_os_family == "Debian"
+- hosts: localhost
+  connection: local
+  tasks:
+  # Launch PBS
+  - service: name=pbs_server state=started pattern=/usr/sbin/pbs_sched
+    when: ansible_os_family == "RedHat"
+  - service: name=torque-scheduler state=started pattern=/usr/sbin/pbs_sched
+    when: ansible_os_family == "Debian"
 
-    - service: name=torque-server state=stopped pattern=/usr/sbin/pbs_server
-      when: ansible_os_family == "Debian"
-    - service: name=torque-server state=started pattern=/usr/sbin/pbs_server
-      when: ansible_os_family == "Debian"
-      
-    - service: name=pbs_server state=stopped pattern=/usr/sbin/pbs_server
-      when: ansible_os_family == "RedHat"
-    - service: name=pbs_server state=started pattern=/usr/sbin/pbs_server
-      when: ansible_os_family == "RedHat"
+  - service: name=torque-server state=stopped pattern=/usr/sbin/pbs_server
+    when: ansible_os_family == "Debian"
+  - service: name=torque-server state=started pattern=/usr/sbin/pbs_server
+    when: ansible_os_family == "Debian"
+
+  - service: name=pbs_server state=stopped pattern=/usr/sbin/pbs_server
+    when: ansible_os_family == "RedHat"
+  - service: name=pbs_server state=started pattern=/usr/sbin/pbs_server
+    when: ansible_os_family == "RedHat"
