--- a/artifacts/mesos/mesos_slave_lb_configure.yml
+++ b/artifacts/mesos/mesos_slave_lb_configure.yml
@@ -1,7 +1,10 @@
+---
+- hosts: localhost
+  connection: local
 ##################################
 ##           HANDLERS           ##
 ##################################
-- handlers:
+  handlers:
   - name: restart dnsmasq
     service: name=dnsmasq state=restarted
   - name: restart networking
