--- a/artifacts/mesos/mesos_slave_lb_install.yml
+++ b/artifacts/mesos/mesos_slave_lb_install.yml
@@ -1,8 +1,10 @@
 ---
+- hosts: localhost
+  connection: local
 ##################################
 ##           HANDLERS           ##
 ##################################
-- handlers:
+  handlers:
   - name: start docker
     service: name=docker state=started
   - name: reload docker
