--- a/artifacts/mysql/mysql_configure.yml
+++ b/artifacts/mysql/mysql_configure.yml
@@ -1,4 +1,7 @@
-- tasks:
+---
+- hosts: localhost
+  connection: local
+  tasks:
   - name: update mysql root password for all root accounts
     mysql_user: name=root password={{root_password}}
     ignore_errors: yes
@@ -12,9 +15,9 @@
     when: ansible_os_family == "RedHat"
     
   - name: Start MySQL service
-    service: name=mysqld state=restarted
+    service: name=mariadb state=restarted enabled=yes
     when: ansible_os_family == "RedHat"
     
   - name: Start MySQL service
-    service: name=mysql state=restarted
+    service: name=mysql state=restarted enabled=yes
     when: ansible_os_family == "Debian"
