--- a/artifacts/mysql/mysql_db_import.yml
+++ b/artifacts/mysql/mysql_db_import.yml
@@ -1,4 +1,6 @@
 ---
-- tasks:
+- hosts: localhost
+  connection: local
+  tasks:
   - name: Import the DB 
     mysql_db: name={{db_name}} state=import target={{db_data}} login_user={{db_user}} login_password={{db_password}}
