--- a/artifacts/webapps/cellar-mem.yml
+++ b/artifacts/webapps/cellar-mem.yml
@@ -1,8 +1,11 @@
-- tasks:
-    - name: Install Apache Web Services with PHP support
-      apt: name=apache2 update_cache=yes state=present
-    - apt: name=php5 state=present
-    - name: Retrieve Web Application from download url
-      get_url: url={{download_url}} dest=/tmp
-    - name: Unpacking Web Application 
-      unarchive: src="/tmp/cellar-webapp-mem.tgz" dest="/var/www/html" copy=no
+---
+- hosts: localhost
+  connection: local
+  tasks:
+  - name: Install Apache Web Services with PHP support
+    apt: name=apache2 update_cache=yes state=present
+  - apt: name=php5 state=present
+  - name: Retrieve Web Application from download url
+    get_url: url={{download_url}} dest=/tmp
+  - name: Unpacking Web Application
+    unarchive: src="/tmp/cellar-webapp-mem.tgz" dest="/var/www/html" copy=no
