--- a/examples/cellar_webapp_mysql.yaml
+++ b/examples/cellar_webapp_mysql.yaml
@@ -36,7 +36,7 @@ topology_template:
       interfaces:
         Standard:
           configure: 
-            implementation: webapps/cellar-mysql.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/webapps/cellar-mysql.yml
             inputs:
               download_url: { get_input: download_url }
               db_host: { get_attribute: [ db_server, private_address ] }
@@ -83,7 +83,7 @@ topology_template:
       interfaces:
         Standard:
           configure:
-            implementation: mysql/mysql_db_import.yml
+            implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mysql/mysql_db_import.yml
             inputs:
               db_name: { get_property: [ SELF, name ] }
               db_data: { get_artifact: [ SELF, db_content ] }
