--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -95,7 +95,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mysql/mysql_db_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mysql/mysql_db_configure.yml
           inputs:
             db_password: { get_property: [ SELF, password ] }
             db_name: { get_property: [ SELF, name ] }
@@ -121,9 +121,9 @@ node_types:
         valid_source_types: [ tosca.nodes.Database.MySQL ]
     interfaces:
       Standard:
-        create: mysql/mysql_install.yml
+        create: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mysql/mysql_install.yml
         configure:
-          implementation: mysql/mysql_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mysql/mysql_configure.yml
           inputs:
             root_password: { get_property: [ SELF, root_password ] }
             port: { get_property: [ SELF, port ] }
@@ -133,9 +133,9 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: apache/apache_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/apache/apache_install.yml
         start:
-          implementation: apache/apache_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/apache/apache_start.yml
 
 # INDIGO non normative types
 
@@ -157,7 +157,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mysql/mysql_db_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mysql/mysql_db_configure.yml
           inputs:
             db_password: { get_property: [ SELF, password ] }
             db_name: { get_property: [ SELF, name ] }
@@ -215,7 +215,7 @@ node_types:
     interfaces:
       Standard:
         configure:
-          implementation: zabbix/zabbix_agent_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/zabbix/zabbix_agent_install.yml
           inputs:
             zabbix_server: { get_property: [ SELF, zabbix_server ] }
             zabbix_server_port: { get_property: [ SELF, zabbix_server_port ] }
@@ -252,11 +252,11 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: galaxy/galaxy_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/galaxy/galaxy_install.yml
           inputs:
             galaxy_install_path: { get_property: [ SELF, install_path ] }
         configure:
-          implementation: galaxy/galaxy_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/galaxy/galaxy_configure.yml
           inputs:
             galaxy_user: { get_property: [ SELF, user ] }
             galaxy_install_path: { get_property: [ SELF, install_path ] }
@@ -264,7 +264,7 @@ node_types:
             galaxy_admin_api_key: { get_property: [ SELF, admin_api_key ] }
             galaxy_lrms: { get_property: [ SELF, lrms, type ] }
         start:
-          implementation: galaxy/galaxy_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/galaxy/galaxy_start.yml
           inputs:
             galaxy_user: { get_property: [ SELF, user ] }
             galaxy_install_path: { get_property: [ SELF, install_path ] }
@@ -292,7 +292,7 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: galaxy/galaxy_tools_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/galaxy/galaxy_tools_configure.yml
           inputs:
             galaxy_install_path: { get_property: [ HOST, install_path ] }
             galaxy_admin_api_key: { get_property: [ HOST, admin_api_key ] }
@@ -314,15 +314,15 @@ node_types:
         required: false
     interfaces:
       Standard:
-        create: ec3/ec3_install.yml
+        create: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/ec3/ec3_install.yml
         configure:
-          implementation: ec3/ec3_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/ec3/ec3_configure.yml
           inputs:
             clues_secret_token: { get_property: [ SELF, secret_token ] }
             clues_queue_system: { get_property: [ SELF, lrms, type ] }
             ec3_max_instances: { get_property: [ SELF, wn, max_instances] }
             ec3_deployment_id: { get_property: [ SELF, deployment_id] }
-        start: ec3/ec3_start.yml
+        start: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/ec3/ec3_start.yml
     requirements:
       - wn:
           capability: tosca.capabilities.Scalable
@@ -349,9 +349,9 @@ node_types:
     derived_from: tosca.nodes.indigo.LRMS.WorkerNode
     interfaces:
       Standard:
-        create: lrms/torque/torque_wn_install.yml
-        configure: lrms/torque/torque_wn_configure.yml
-        start: lrms/torque/torque_wn_start.yml
+        create: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_wn_install.yml
+        configure: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_wn_configure.yml
+        start: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_wn_start.yml
 
   tosca.nodes.indigo.LRMS.FrontEnd:
     derived_from: tosca.nodes.SoftwareComponent
@@ -371,9 +371,9 @@ node_types:
           type: tosca.capabilities.indigo.LRMS.Torque
     interfaces:
       Standard:
-        create: lrms/torque/torque_fe_install.yml
-        configure: lrms/torque/torque_fe_configure.yml
-        start: lrms/torque/torque_fe_start.yml
+        create: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_fe_install.yml
+        configure: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_fe_configure.yml
+        start: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/lrms/torque/torque_fe_start.yml
         
   tosca.nodes.indigo.LRMS.FrontEnd.Local:
     derived_from: tosca.nodes.indigo.LRMS.FrontEnd
@@ -416,13 +416,13 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mesos/mesos_master_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_install.yml
         configure:
-          implementation: mesos/mesos_master_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_configure.yml
           inputs:
             master_ips: { get_attribute: [ HOST, public_address ] }
         start:
-          implementation: mesos/mesos_master_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_start.yml
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -440,13 +440,13 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mesos/mesos_slave_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_install.yml
         configure:
-          implementation: mesos/mesos_slave_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_configure.yml
           inputs:
             mesos_master_ips: { get_property: [ SELF, master_ips ] }
         start:
-          implementation: mesos/mesos_slave_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_start.yml
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -464,14 +464,14 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mesos/mesos_master_lb_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_lb_install.yml
         configure:
-          implementation: mesos/mesos_master_lb_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_lb_configure.yml
           inputs:
             mesos_master_ips: { get_property: [ SELF, master_ips ] }
             lb_master_ip: { get_attribute: [ HOST, public_address ] }
         start:
-          implementation: mesos/mesos_master_lb_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_master_lb_start.yml
     requirements:
       - host:
           capability: tosca.capabilities.Container
@@ -494,14 +494,14 @@ node_types:
     interfaces:
       Standard:
         create:
-          implementation: mesos/mesos_slave_lb_install.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_lb_install.yml
         configure:
-          implementation: mesos/mesos_slave_lb_configure.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_lb_configure.yml
           inputs:
             mesos_master_ips: { get_property: [ SELF, master_ips ] }
             keepalived_vip: { get_property: [ SELF, lb_master_ip ] }
         start:
-          implementation: mesos/mesos_slave_lb_start.yml
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/mesos/mesos_slave_lb_start.yml
     requirements:
       - host:
           capability: tosca.capabilities.Container
