--- a/artifacts/mysql/mysql_db_configure.yml
+++ b/artifacts/mysql/mysql_db_configure.yml
@@ -4,6 +4,9 @@
   tasks:
   - name: Create DB {{db_name}}
     mysql_db: name={{db_name}} state=present login_user=root login_password={{db_root_password}}
-  
+
+  - name: Remove anonymous local user (needed so that the created db_user can be used locally)
+    mysql_user: name='' host=localhost state=absent login_user=root login_password={{db_root_password}}
+
   - name: Create user {{db_user}} for the DB {{db_name}}
     mysql_user: name={{db_user}} password={{db_password}} login_user=root login_password={{db_root_password}} host={{db_access_host}} priv={{db_name}}.*:ALL,GRANT state=present
