--- a/examples/mesos_cluster.yaml
+++ b/examples/mesos_cluster.yaml
@@ -38,9 +38,10 @@ topology_template:
 
     mesos_master_server:
       type: tosca.nodes.indigo.Compute
-      properties:
-        public_ip: yes
       capabilities:
+        endpoint:
+          properties:
+            network_name: PUBLIC
         scalable:
           properties:
             count: 3
@@ -56,8 +57,6 @@ topology_template:
 
     mesos_slave_server:
       type: tosca.nodes.indigo.Compute
-      properties:
-        public_ip: no
       capabilities:
         scalable:
           properties:
@@ -74,9 +73,10 @@ topology_template:
 
     mesos_lb_master_server:
       type: tosca.nodes.indigo.Compute
-      properties:
-        public_ip: yes
       capabilities:
+        endpoint:
+          properties:
+            network_name: PUBLIC
         scalable:
           properties:
             count: 1
@@ -92,8 +92,6 @@ topology_template:
 
     mesos_lb_slave_server:
       type: tosca.nodes.indigo.Compute
-      properties:
-        public_ip: no
       capabilities:
         scalable:
           properties:
