--- a/artifacts/ec3/ec3_install.yml
+++ b/artifacts/ec3/ec3_install.yml
@@ -9,11 +9,11 @@
       
     # CLUES2 requirements
     - name: Apt install CLUES2 requirements in Deb system
-      apt: pkg=python-sqlite,unzip
+      apt: pkg=python-pip,python-sqlite,unzip
       when: ansible_os_family == "Debian"
 
     - name: Yum install CLUES2 requirements in REL system
-      yum: pkg=python-sqlite2,unzip
+      yum: pkg=python-pip,python-sqlite2,unzip
       when: ansible_os_family == "RedHat"
 
     - name: Install CLUES pip requirements
@@ -44,9 +44,5 @@
       retries: 5
       delay: 1
 
-    - command: pip install -e /tmp/cpyutils-master
-    - command: pip install -e /tmp/clues-master
-
-    # This only works with ansible 2.X
-    #- pip: name='/tmp/cpyutils-master' editable=true
-    #- pip: name='/tmp/clues-master' editable=true
+    - pip: name='/tmp/cpyutils-master'
+    - pip: name='/tmp/clues-master'
