--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -546,6 +546,14 @@ node_types:
   tosca.nodes.indigo.OneDataStorage:
     derived_from: tosca.nodes.BlockStorage
     properties:
+      oneprovider_host:
+        type: list
+        entry_schema:
+          type: string
+      dataspace:
+        type: list
+        entry_schema:
+          type: string
       credential:
         type: tosca.datatypes.Credential
         required: yes
